# docs/swagger.yaml
@@ -20,6 +20,8 @@ definitions:
     properties:
       email:
         type: string
+      image_url:
+        type: string
       name:
         description: fullname
         type: string
@@ -44,6 +46,19 @@ definitions:
       token:
         type: string
     type: object
+  model.UpdateUser:
+    properties:
+      image_url:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+      whatsapp_number:
+        type: string
+    type: object
   model.UserRes:
     properties:
       created_at:
@@ -54,7 +69,11 @@ definitions:
         type: string
       id:
         type: string
+      image_url:
+        type: string
       name:
+        type: string
+      referal_code:
         type: string
       role:
         type: string
@@ -82,7 +101,7 @@ definitions:
         type: string
       description:
         type: string
-      image:
+      images:
         items:
           $ref: '#/definitions/request.ProductImage'
         type: array
@@ -90,13 +109,11 @@ definitions:
         type: number
       price:
         type: number
-      product_category_id:
-        type: string
-      product_category_name:
-        type: string
       product_name:
         type: string
       product_sub_category:
+        type: string
+      public_access:
         type: string
       tdp:
         type: number
@@ -806,6 +823,40 @@ paths:
           schema:
             $ref: '#/definitions/response.Response'
       summary: Register a new user
+      tags:
+      - User
+  /user/update:
+    put:
+      consumes:
+      - application/json
+      description: Update data sales
+      parameters:
+      - description: User Data
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateUser'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Update a user
       tags:
       - User
 swagger: "2.0"
